# Generated by Django 6.0.3 on 2026-03-04 00:55

import django.db.models.deletion
import django.utils.timezone
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('id', models.UUIDField(db_column='id', default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('phone', models.CharField(db_index=True, help_text='Used as the primary login credential.', max_length=15, unique=True, verbose_name='Phone Number')),
                ('email', models.EmailField(blank=True, db_index=True, max_length=255, null=True, unique=True, verbose_name='Email Address')),
                ('account_status', models.CharField(choices=[('active', 'Active'), ('suspended', 'Suspended'), ('banned', 'Banned')], db_index=True, default='active', max_length=20, verbose_name='Account Status')),
                ('is_verified', models.BooleanField(default=False, help_text="Whether the user's identity documents are verified.", verbose_name='KYC Verified')),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=False)),
                ('is_superuser', models.BooleanField(default=False)),
                ('is_deleted', models.BooleanField(db_index=True, default=False, help_text='Marks a user as deleted without removing the record.', verbose_name='Soft Deleted')),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('date_joined', models.DateTimeField(db_column='created_at', default=django.utils.timezone.now, verbose_name='Date Joined')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'User',
                'verbose_name_plural': 'Users',
                'db_table': 'users',
                'ordering': ['-date_joined'],
            },
        ),
        migrations.CreateModel(
            name='Role',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role_name', models.CharField(max_length=50, unique=True, verbose_name='Role Name')),
                ('description', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Role',
                'verbose_name_plural': 'Roles',
                'db_table': 'roles',
                'ordering': ['role_name'],
            },
        ),
        migrations.CreateModel(
            name='UserProfile',
            fields=[
                ('user', models.OneToOneField(db_column='user_id', on_delete=django.db.models.deletion.CASCADE, primary_key=True, related_name='profile', serialize=False, to=settings.AUTH_USER_MODEL)),
                ('full_name', models.CharField(blank=True, max_length=255, verbose_name='Full Name')),
                ('gender', models.CharField(blank=True, choices=[('male', 'Male'), ('female', 'Female'), ('other', 'Other')], max_length=10, null=True)),
                ('profile_photo_url', models.ImageField(blank=True, null=True, upload_to='profiles/', verbose_name='Profile Photo')),
                ('date_of_birth', models.DateField(blank=True, null=True)),
                ('language_preference', models.CharField(default='en', max_length=10)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'User Profile',
                'verbose_name_plural': 'User Profiles',
                'db_table': 'user_profiles',
            },
        ),
        migrations.CreateModel(
            name='UserRole',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True)),
                ('assigned_at', models.DateTimeField(auto_now_add=True)),
                ('role', models.ForeignKey(db_column='role_id', on_delete=django.db.models.deletion.PROTECT, related_name='user_roles', to='accounts.role')),
                ('user', models.ForeignKey(db_column='user_id', on_delete=django.db.models.deletion.CASCADE, related_name='user_roles', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'User Role',
                'verbose_name_plural': 'User Roles',
                'db_table': 'user_roles',
            },
        ),
        migrations.CreateModel(
            name='WorkerProfile',
            fields=[
                ('user', models.OneToOneField(db_column='user_id', on_delete=django.db.models.deletion.CASCADE, primary_key=True, related_name='worker_profile', serialize=False, to=settings.AUTH_USER_MODEL)),
                ('worker_status', models.CharField(choices=[('active', 'Active'), ('offline', 'Offline'), ('banned', 'Banned'), ('suspended', 'Suspended'), ('pending', 'Pending Approval')], db_index=True, default='pending', max_length=20, verbose_name='Worker Status')),
                ('government_id_type', models.CharField(blank=True, max_length=30)),
                ('government_id_number', models.CharField(blank=True, max_length=30, null=True, unique=True)),
                ('experience_years', models.PositiveSmallIntegerField(default=0)),
                ('bio', models.TextField(blank=True)),
                ('average_rating', models.DecimalField(decimal_places=2, default=0.0, max_digits=3, verbose_name='Average Rating')),
                ('total_jobs_completed', models.PositiveIntegerField(default=0)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('is_deleted', models.BooleanField(db_index=True, default=False)),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_column='created_at')),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Worker Profile',
                'verbose_name_plural': 'Worker Profiles',
                'db_table': 'worker_profiles',
                'indexes': [models.Index(fields=['worker_status'], name='idx_wp_status'), models.Index(fields=['is_available'], name='idx_wp_available')],
            },
        ),
        migrations.CreateModel(
            name='VerificationRequest',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('request_type', models.CharField(default='initial_verification', max_length=50, verbose_name='Request Type')),
                ('status', models.CharField(choices=[('pending', 'Pending Review'), ('approved', 'Approved'), ('rejected', 'Rejected')], db_index=True, default='pending', max_length=20)),
                ('documents_submitted', models.JSONField(default=list, help_text='List of document objects: [{type, url}]', verbose_name='Submitted Documents')),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('rejection_reason', models.TextField(blank=True)),
                ('admin_notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('reviewed_by', models.ForeignKey(blank=True, db_column='reviewed_by', limit_choices_to={'is_staff': True}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_requests', to=settings.AUTH_USER_MODEL)),
                ('worker', models.ForeignKey(db_column='worker_id', on_delete=django.db.models.deletion.CASCADE, related_name='verification_requests', to='accounts.workerprofile')),
            ],
            options={
                'verbose_name': 'Verification Request',
                'verbose_name_plural': 'Verification Requests',
                'db_table': 'verification_requests',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['phone'], name='idx_users_phone'),
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['email'], name='idx_users_email'),
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['account_status'], name='idx_users_status'),
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['is_deleted'], name='idx_users_deleted'),
        ),
        migrations.AddIndex(
            model_name='userrole',
            index=models.Index(fields=['user', 'is_active'], name='idx_user_roles_active'),
        ),
        migrations.AlterUniqueTogether(
            name='userrole',
            unique_together={('user', 'role')},
        ),
        migrations.AddIndex(
            model_name='verificationrequest',
            index=models.Index(fields=['status'], name='idx_vr_status'),
        ),
        migrations.AddIndex(
            model_name='verificationrequest',
            index=models.Index(fields=['worker_id'], name='idx_vr_worker'),
        ),
    ]
